Thu Jan  5 00:53:30 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * ChangeLog:
        
          Untabify.
          Delete-trailing-spaces.

          Changed "add-log-time-format" to a really ugly lambda expression
          that formats changelog timestamps in UTC and works with both GNU
          Emacs and XEmacs.

Wed Jan  4 21:01:15 2006  Boris Kolpackov  <boris@kolpackov.net>

        * ciao/CCM_Base.idl:

        Replaced #if !defined (CIAO_HAS_IMPORT_KEYWORD) with
        #ifdef CIAO_HAS_IMPORT_KEYWORD. This will give CIDLC's
        CPP a chance to handle it properly.

        * CCF/CCF/CompilerElements/Preprocessor.cpp:

        Fixed a bug in lexeme parsing.

Wed Jan  4 11:39:59 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * ciao/CCM_Core.mpc

        Removed $CIAO_ROOT/DAnCE include, added CIAO_ROOT/ciao.

Tue Jan  3 19:55:43 2006  Boris Kolpackov  <boris@kolpackov.net>

        * CCF/CCF/CompilerElements/Preprocessor.cpp:
        * CCF/CCF/CompilerElements/Preprocessor.hpp:
        * CCF/CCF/IDL3/SemanticAction/Impl/Include.cpp:
        * CIDLC/cidlc.cpp:

        Implemented support for basic preprocessor directives:
        #ifdef, #ifndef, #else, and #endif as well as the -D
        command-line option. Also added exception handlers for
        filesystem exceptions.

        * CCF/CCF/IDL2/SemanticAction/Impl/Member.cpp:
        * CCF/CCF/IDL2/SemanticAction/Impl/Union.cpp:
        * CCF/CCF/IDL2/SemanticGraph/Struct.cpp:
        * CCF/CCF/IDL2/SemanticGraph/Struct.hpp:
        * CCF/CCF/IDL2/SemanticGraph/Union.cpp:
        * CCF/CCF/IDL2/SemanticGraph/Union.hpp:

        Implemented incomplete struct and union semantics which
        will appear in CORBA 3.1.

        * CCF/CCF/CodeGenerationKit/IndentationCxx.hpp:

        Code clean-ups.

Fri Dec 30 11:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Dynamic_Component_Servant_Base.{h,cpp}: